// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: SectionSwitch renders 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "paddingVertical": 16,
    }
  }
>
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.0015,
            "lineHeight": 24,
            "textAlign": "left",
          },
        ],
        [
          {
            "flex": 1,
          },
          null,
        ],
      ]
    }
  >
    label
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    activeThumbColor="#fafafa"
    colorScheme="primary"
    dataSet={{}}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#FEB027"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {},
          {
            "backgroundColor": "#d4d4d4",
            "borderRadius": 16,
          },
        ],
      ]
    }
    thumbTintColor="white"
    value={true}
  />
</View>
`;

exports[`component: SectionSwitch renders disabled 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "paddingVertical": 16,
    }
  }
>
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.0015,
            "lineHeight": 24,
            "textAlign": "left",
          },
        ],
        [
          {
            "flex": 1,
          },
          {
            "opacity": 0.3,
          },
        ],
      ]
    }
  >
    label
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    activeThumbColor="#fafafa"
    colorScheme="primary"
    dataSet={{}}
    disabled={true}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#FEB027"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "opacity": 0.4,
          },
          {
            "backgroundColor": "#d4d4d4",
            "borderRadius": 16,
          },
        ],
      ]
    }
    thumbTintColor="white"
    value={true}
  />
</View>
`;
